# ParallelProgramming

./: .gitignore  CMakeLists.txt  function.cpp  function.h  utils.h
create_process/: create_process.cpp  create_process.h
create_thread/: create_thread.cpp
cuda/: main.cu
fork/: fork.cpp  fork.h
lab1/: brute.cpp
lab2/: create_thread.cpp
mpi/: mpi.cpp  mpi.h
mpi_all/: mpi_all.cpp  mpi_all.h
omp/: omp.cpp
pthread_create/: pthread_create.cpp
std_thread/: std_thread.cpp
